<resources>
    <string name="app_name" translatable="false">TuckTack</string>
    <string name="locale">default</string>
    <string name="abstandIntervall">distance in min.</string>
    <string name="geteilt">shared</string>
    <string name="speichern">save</string>
    <string name="cancel">Cancel</string>
    <string name="finish">done</string>
    <string name="delete">delete</string>
    <string name="Alarmintervall_Auswählen">select an alarm interval</string>
    <string name="Minuten">minutes</string>
    <string name="Anzahl">number</string>
    <string name="ok">OK</string>
    <string name="alarmIntervallManuel">%1$d times every %2$d min.</string>
    <string name="choose_alarmtone">select an alarm tone</string>
    <string name="Name_Wecker">Has the alarm clock a name\?</string>
    <string name="AlarmTon">select a ringtone or song</string>
    <string name="Musik">music</string>
    <string name="choosenTime" translatable="false">%1$d:%2$s</string>
    <string name="malAlle" translatable="false">*</string>
    <string name="Mo">Monday</string>
    <string name="Di">Tuesday</string>
    <string name="Mi">Wednesday</string>
    <string name="Do">Thursday</string>
    <string name="Fr">Friday</string>
    <string name="Sa">Saturday</string>
    <string name="So">Sunday</string>
    <string name="realy">Should the alarm clock really be discarded?</string>
    <string name="realy2">Should the changes really be discarded?</string>
    <string name="noMore">The alarm clock is no longer used! Should it be deleted?</string>
    <string name="noMoreV">The alarm clock is no longer used! Should it be deleted?\nBecause it is shared the overview in the Control-Center would also be gone!</string>
    <string name="Alarme">Alarms</string>
    <string name="Hinzufügen">Add</string>
    <string name="ForMe">For me too</string>
    <string name="SMS">With SMS</string>
    <string name="APP">With APP</string>
    <string name="verschlafen">OVERSLEPT</string>
    <string name="auslogen">log out</string>
    <string name="emailAendern">New mobile number</string>
    <string name="EmailVar" translatable="false">%1$s</string>
    <string name="Email">Mobile number:</string>
    <string name="Account">Account:</string>
    <string name="deleteAccount">Delete account</string>
    <string name="Benutzername">User name:</string>
    <string name="Google2">Your user name is provided by Google. You would have to change it in your Google account.</string>
    <string name="usernameAendern">New user name</string>
    <string name="Profilbild">Change profile picture</string>
    <string name="ProfilbildUpdate">Profile picture successfully uploaded!</string>
    <string name="AllUsers">All users</string>
    <string name="Profil">Profile</string>
    <string name="sRequest">Alarmbuddy?</string>
    <string name="sRequestCancel">abort request</string>
    <string name="sRequestAccept">accept</string>
    <string name="dRequest">reject</string>
    <string name="AnfrageVersendet">Request sent!</string>
    <string name="AnfrageCanceld">Request canceled</string>
    <string name="AnfrageAbgelehnt">reject request</string>
    <string name="Friends">You are buddies now</string>
    <string name="Unfriend">delete\n%1s</string>
    <string name="Unfriended">removed %1s</string>
    <string name="FriendsFragment">Buddies</string>
    <string name="ChooseFriendAlarm">Send alarm to…</string>
    <string name="ChooseFriendMessage">Choose an Alarm Buddy...</string>
    <string name="SearchFriend">Search for buddies</string>
    <string name="message_details">minder info:</string>
    <string name="message_lastSend">last active: %1s</string>
    <string name="message_turnedOff">status: %1s</string>
    <string name="message_alarmDetails">alarm details:</string>
    <string name="message_alarmRepeatYes">repeat: yes</string>
    <string name="message_alarmRepeatNo">repeat: no</string>
    <string name="message_alarmDays">days:</string>
    <string name="message_alarmAlarm">alarm interval: %1s</string>
    <string name="alarmOnce">once</string>
    <string name="alarmUpdatesButton">do not use</string>
    <string name="sAlarmNeu">new</string>
    <string name="sAlarmUpdated">updated</string>
    <string name="sAlarmDeleted">deleted</string>
    <string name="user_deleted">User deleted</string>
    <string name="message_deletedByBuddy">Is no longer a minder: %1s</string>
    <string name="Alarmname">alarm name</string>
    <string name="AlarmnameNo">no name yet</string>
    <string name="AlarmTage">Days</string>
    <string name="AlarmIntervall">Interval</string>
    <string name="AlarmIntervallNo">once</string>
    <string name="AlarmTone">Alarm tone</string>
    <string name="AlarmVolume">Volume</string>
    <string name="SpeechControl">Voice control</string>
    <string name="On">on</string>
    <string name="Off">off</string>
    <string name="alarmDuration">Alarm duration (in seconds)</string>
    <string name="Freundschaftsanfrage">Friend request</string>
    <string name="FreundschaftsanfrageBody" formatted="false">%1$s has sent you a friend request.</string>
    <string name="Wecker">Alarm clock</string>
    <string name="WeckerBody" formatted="false">%1$s has sent you an alarm clock.</string>
    <string name="Weckerupdate">Alarm clock update</string>
    <string name="WeckerupdateBody" formatted="false">%1$s has updated the alarm clock.</string>
    <string name="WeckerDeleted">Alarm clock deleted</string>
    <string name="WeckerDeletedBody" formatted="false">%1$s has deleted the alarm clock.</string>
    <string name="FromWeckerDeletedBody" formatted="false">%1$s has removed you from the alarm clock.</string>
    <string name="Weckernachricht">Look after</string>
    <string name="WeckernachrichtBody" formatted="false">%1$s wants you to be a minder.</string>
    <string name="Weckernachrichtupdate">minder update</string>
    <string name="WeckernachrichtupdateBody" formatted="false">"%1$s has updated the alarm"</string>
    <string name="WeckernachrichtDeleted">Alarm deleted</string>
    <string name="WeckernachrichtDeletedBody" formatted="false">"%1$s has deleted the alarm to look after</string>
    <string name="NachrichtDeleted">You have been removed</string>
    <string name="FromNachrichtDeletedBody" formatted="false">You do not have to look after %1$s anymore.</string>
    <string name="MyMessageDeleted">Doesn\'t look after anymore</string>
    <string name="MyMessageDeletedBody" formatted="false">%1$s doesn\'t look after your alarm anymore.</string>
    <string name="KeineMusik">No music found!</string>
    <string name="SharedWeckerDeleted">The alarm clock is shown as deleted to all Buddies!</string>
    <string name="SharedWeckerANDDeleted">The alarm clock is shown as deleted to all Buddies and deleted for minders.!</string>
    <string name="SharedMessagesDeleted">The alarm clock will be deleted for all minders!</string>
    <string name="Ja">Yes</string>
    <string name="Nein">No</string>
    <string name="einstellung">default settings</string>
    <string name="wifi">Wifi when ringing</string>
    <string name="wifiAutoNo">Wifi is NOT automatically turned on if the alarm clock has shared a message and / or notifies an alarm owner.</string>
    <string name="wifiAutoYes">Wifi is automatically turned on if the alarm clock has shared a message and / or notifies an alarm owner.</string>
    <string name="standardAlarmSound">Alarm tone</string>
    <string name="standardVolume">Volume</string>
    <string name="standardDuration">Alarm duration</string>
    <string name="standardIntervall">Interval</string>
    <string name="standardVoicecontrole">Voice control</string>
    <string name="autoDownload">Automatic alarm clock download!</string>
    <string name="autoDownloadExplanation">The alarm clocks of trusted Buddies are automatically downloaded and turned on!</string>
    <string name="Timer">TIMER</string>
    <string name="timer_expired">Timer has finished</string>
    <string name="timer_again">restart?</string>
    <string name="timer_start_in_Notification">start</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_end">ends: %1$s</string>
    <string name="timer_ended">ended: %1$s</string>
    <string name="timer_pause_in_Notification">pause</string>
    <string name="timer_stop_in_Notification">reset</string>
    <string name="timer_resume">continue timer</string>
    <string name="timer_resume_in_Notification">continue</string>
    <string name="negativ_timer" translatable="false">- %s</string>
    <string name="timer_already">There is already a timer running</string>
    <string name="houre">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="control_center">Control-Center</string>
    <string name="onlyMe">Only for me</string>
    <string name="weckerVon">Alarm clock by:\u0020</string>
    <string name="vonMir">Shared by me</string>
    <string name="vonMirUnd">shared + minder</string>
    <string name="mitNachricht">With minder</string>
    <string name="klingeltIn">Goes off in: %1$d h and %2$d min.</string>
    <string name="klingeltInShort">%1$d h and %2$d min.</string>
    <string name="klingeltInToast">Goes off in: %1$s</string>
    <string name="nextAlarm">Next alarm: %s</string>
    <string name="nextTime" translatable="false">%1$s:%2$s</string>
    <string name="nextIntervall">%1$d every %2$d min.</string>
    <string name="sharedFeed">New : %1$d , Updated: %2$d</string>
    <string name="keineSharedMessage">No alarm to look after</string>
    <string name="noSharedMessageConnection">No connection to the database!</string>
    <string name="deleteAll">delete all (%d)</string>
    <string name="NoWecker">delete all(0)</string>
    <string name="sharedIntervall" translatable="false">interval</string>
    <string name="sharedAnzahl" translatable="false">anzahl</string>
    <string name="sharedVolume" translatable="false">volume</string>
    <string name="sharedAlarmsound" translatable="false">sound</string>
    <string name="sharedVoicecontrol" translatable="false">voiceControl</string>
    <string name="sharedDuration" translatable="false">duration</string>
    <string name="sharedWifi" translatable="false">wifi</string>
    <string name="sharedTimeBisVerschlafen" translatable="false">timeBisVerschlafen</string>
    <string name="sharedTokenSend" translatable="false">tokenSend</string>
    <string name="sharedInviteLink" translatable="false">inviteLink</string>
    <string name="sharedFullVersion" translatable="false">fullVersion</string>
    <string name="speechDisclaimer">If a song with text is played or the alarm is turned to full volume your instructions cannot always be understood reliably.\n\nThat will be improved significantly in the upcoming updates.</string>
    <string name="speechSnooze2">pause</string>
    <string name="speechSnooze1">snooze</string>
    <string name="speechSnooze3">right away</string>
    <string name="toSnooze">To snooze call:</string>
    <string name="toTurnOff">To turn off call:</string>
    <string name="speechOff1">off</string>
    <string name="speechOff2">turn off</string>
    <string name="speechOff3">get lost</string>
    <string name="invite">share</string>
    <string name="impressum">Company Information/\nPrivacy</string>
    <string name="guide">What&amp;How</string>
    <string name="darkBackground">dark background behind profile picture</string>
    <string name="newNumberHint">type in a new number</string>
    <string name="deletePIImg">click to delete profile picture</string>
    <string name="deleteAccountImg">click to delete your account</string>
    <string name="newUserName">type in a new user name</string>
    <string name="oStartGuide">Start Guide</string>
    <string name="oPrivacy"><u>View privacy policy</u></string>
</resources>