<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nicolai.calmingalarm20.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/Profil"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/einstellung"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings4"
        android:orderInCategory="100"
        android:title="@string/invite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings7"
        android:orderInCategory="100"
        android:title="@string/guide"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings6"
        android:orderInCategory="100"
        android:title="------------------------------------"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/auslogen"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings5"
        android:orderInCategory="100"
        android:title="@string/impressum"
        app:showAsAction="never" />
</menu>
