<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SettingsActivity">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/darkBackground"
                app:layout_constraintBottom_toTopOf="@+id/view1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/profile_background1" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="100dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view1"
                style="@style/Divider"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changeImage" />

            <EditText
                android:id="@+id/nummerAendern"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/newNumberHint"
                android:ems="10"
                android:hint="@string/emailAendern"
                android:inputType="phone"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineProfileSettings"
                app:layout_constraintTop_toBottomOf="@+id/emailView" />

            <TextView
                android:id="@+id/emailView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:onClick="aendern"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineProfileSettings"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <View
                android:id="@+id/view2"
                style="@style/Divider"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barrierEmail" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="nummerAendern,emailView,email" />

            <TextView
                android:id="@+id/email"
                style="@style/SettingsSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:onClick="aendern"
                android:text="@string/Email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineProfileSettings"
                app:layout_constraintTop_toBottomOf="@+id/viewUsername" />

            <TextView
                android:id="@+id/Account"
                style="@style/SettingsSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:onClick="aendernAccount"
                android:text="@string/Account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineProfileSettings"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/deleteAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:onClick="aendernAccount"
                android:text="@string/deleteAccount"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/guidelineProfileSettings"
                app:layout_constraintTop_toBottomOf="@+id/Account" />

            <ImageView
                android:id="@+id/deleteImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/deleteAccountImg"
                android:onClick="aendernAccount"
                app:layout_constraintBottom_toBottomOf="@+id/deleteAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/deleteAccount"
                app:layout_constraintTop_toTopOf="@+id/deleteAccount"
                app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

            <View
                android:id="@+id/viewAccount"
                style="@style/Divider"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/deleteAccount" />

            <TextView
                android:id="@+id/username"
                style="@style/SettingsSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:onClick="aendernUsername"
                android:text="@string/Benutzername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineProfileSettings"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <TextView
                android:id="@+id/usernameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:onClick="aendernUsername"
                android:text=""
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineProfileSettings"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <View
                android:id="@+id/viewUsername"
                style="@style/Divider"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barrierUsername" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="usernameView,username,usernameAendern,google2" />

            <EditText
                android:id="@+id/usernameAendern"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/newUserName"
                android:ems="10"
                android:hint="@string/usernameAendern"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineProfileSettings"
                app:layout_constraintTop_toBottomOf="@+id/usernameView" />

            <TextView
                android:id="@+id/google2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/Google2"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineProfileSettings"
                app:layout_constraintTop_toBottomOf="@+id/usernameView" />

            <Button
                android:id="@+id/changeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/round_search_button"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Profilbild"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/deleteImgButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                app:layout_constraintStart_toStartOf="@+id/circleImageView"
                app:layout_constraintTop_toTopOf="@+id/circleImageView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineProfileSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <ImageButton
                android:id="@+id/deleteImgButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/round_search_button"
                android:contentDescription="@string/deletePIImg"
                android:onClick="deleteImg"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/changeImage"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/changeImage"
                app:layout_constraintTop_toTopOf="@+id/changeImage"
                app:srcCompat="@drawable/ic_delete_white_24dp" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/deletAccountGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="view2,Account,deleteAccount,deleteImage,viewAccount" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_search_button"
                android:text="@string/oStartGuide"
                android:onClick="startGuideButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewAccount" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/oPrivacy"
                android:visibility="gone"
                android:onClick="viewPrivacyPolicy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/guideGroupe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="button,textView4" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>